@@ -25,7 +25,7 @@ import org.springframework.web.context.WebApplicationContext;
  * ServletContext. This is e.g. useful for accessing a Spring context from
  * within custom web views or Struts actions.
  * @author Juergen Hoeller
- * @version $Id: WebApplicationContextUtils.java,v 1.9 2004-03-18 02:46:14 trisberg Exp $
+ * @version $Id: WebApplicationContextUtils.java,v 1.10 2004-03-22 10:32:17 jhoeller Exp $
  * @see org.springframework.web.context.ContextLoader
  */
 public abstract class WebApplicationContextUtils {
@@ -38,7 +38,20 @@ public abstract class WebApplicationContextUtils {
 	 * @see org.springframework.web.context.WebApplicationContext#ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE
 	 */
 	public static WebApplicationContext getWebApplicationContext(ServletContext sc) {
-		return (WebApplicationContext) sc.getAttribute(WebApplicationContext.ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE);
+		Object attr = sc.getAttribute(WebApplicationContext.ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE);
+		if (attr == null) {
+			return null;
+		}
+		if (attr instanceof RuntimeException) {
+			throw (RuntimeException) attr;
+		}
+		if (attr instanceof Error) {
+			throw (Error) attr;
+		}
+		if (!(attr instanceof WebApplicationContext)) {
+			throw new IllegalStateException("Root context attribute is not of type WebApplicationContext: " + attr);
+		}
+		return (WebApplicationContext) attr;
 	}
 
 	/**
