@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.116 2004-03-22 09:20:33 jhoeller Exp $
+$Id: changelog.txt,v 1.117 2004-03-22 10:35:18 jhoeller Exp $
 
 
 Changes in version 1.0 final (22.3.2003)
@@ -122,6 +122,7 @@ Package org.springframework.web
 * added ServletContextAware interface for application beans, to be detected by web application contexts
 * reworked CommonsMultipartResolver and CosMultipartResolver to implement ServletContextAware
 * added CharacterEncodingFilter, for specifying a character set for requests (typically not sent by current browsers)
+* reworked ContextLoader and WebApplicationContextUtils to remember exceptions thrown on root context initialization
 * added "bindEmptyMultipartFiles" setting to ServletRequestDataBinder
 * added "onBind" callback to BaseCommandController, for customized processing after binding but before validation
 * added "setView" and "setViewName" mutators to ModelAndView, to allow for post-processing in a HandlerInterceptor
